A/k8s-prod/service-location.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-location
spec:
  replicas: 1
  selector:
    matchLabels:
      role: service-location
  template:
    metadata:
      labels:
        role: service-location
    spec:
      containers:
        - name: service-location
          image: pairfy/service-location
          resources:
            limits:
              memory: "500Mi"
            requests:
              memory: "256Mi"       
---
apiVersion: v1
kind: Service
metadata:
  name: service-location
spec:
  selector:
    role: service-location
  ports:
    - name: service-location
      protocol: TCP
      port: 8000
      targetPort: 8000
