A/k8s-prod/service-seller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-seller
spec:
  replicas: 1
  selector:
    matchLabels:
      role: service-seller
  template:
    metadata:
      labels:
        role: service-seller
    spec:
      containers:
        - name: service-seller
          image: pairfy/service-seller
          resources:
            limits:
              memory: "500Mi"
            requests:
              memory: "256Mi"       
---
apiVersion: v1
kind: Service
metadata:
  name: service-seller
spec:
  selector:
    role: service-seller
  ports:
    - name: service-seller
      protocol: TCP
      port: 8000
      targetPort: 8000
