A/k8s-prod/ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    spec.ingressClassName: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://*.pairfy.store, https://pairfy.store"
    nginx.ingress.kubernetes.io/cors-expose-headers: "Set-Cookie"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"


spec:
  tls:
    - hosts:
        - pairfy.store
        - '*.pairfy.store'
      secretName: cloudflare-origin-cert
  rules:
    - host: pairfy.store
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-main
                port:
                  number: 8000
          - path: /api/location/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-location
                port:
                  number: 8000                  
          - path: /api/user/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-user
                port:
                  number: 8000
    - host: seller.pairfy.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-seller
                port:
                  number: 80
